# ixopay-api-core/api/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.3
+openapi: 3.0.0
 info:
   contact:
     email: support@ixopay.com
@@ -15,6 +15,8 @@ servers:
 - url: https://gateway.ixopay.com/api/v3
 security:
 - basicAuth: []
+- basicAuth: []
+  signature: []
 tags:
 - description: Retrieve a list of options
   externalDocs:
@@ -1197,6 +1199,7 @@ paths:
                       cardHolder: John Doe
                       expiryMonth: 12
                       expiryYear: 2030
+                      binDigits: "12345678"
                       firstSixDigits: "123456"
                       lastFourDigits: "4321"
                       threeDSecure: "OFF"
@@ -1265,6 +1268,7 @@ paths:
                       cardHolder: John Doe
                       expiryMonth: 12
                       expiryYear: 2030
+                      binDigits: "12345678"
                       firstSixDigits: "123456"
                       lastFourDigits: "4321"
                       threeDSecure: "OFF"
@@ -3169,54 +3173,10 @@ components:
       items:
         $ref: '#/components/schemas/Split'
       type: array
-    Split:
-      additionalProperties: false
-      example:
-        amount: 0.8008281904610115
-        identification: identification
-        sellerMerchantGuid: sellerMerchantGuid
-        sellerMerchantExternalId: sellerMerchantExternalId
-        currency: currency
-        commisionFee:
-          amount: 6.027456183070403
-          currency: currency
-      properties:
-        identification:
-          type: string
-        amount:
-          type: number
-        currency:
-          pattern: "^[A-Z]{3}$"
-          type: string
-        sellerMerchantGuid:
-          type: string
-        sellerMerchantExternalId:
-          type: string
-        commisionFee:
-          $ref: '#/components/schemas/Split_commisionFee'
-      type: object
     PaymentData:
       oneOf:
-      - $ref: '#/components/schemas/IbanData'
-      - $ref: '#/components/schemas/WalletData'
-    IbanData:
-      additionalProperties: false
-      properties:
-        ibanData:
-          $ref: '#/components/schemas/IbanData_ibanData'
-      type: object
-    WalletData:
-      additionalProperties: false
-      properties:
-        walletData:
-          $ref: '#/components/schemas/WalletData_walletData'
-      type: object
-    ThreeDSecureType:
-      enum:
-      - "OFF"
-      - OPTIONAL
-      - MANDATORY
-      type: string
+      - $ref: '#/components/schemas/PaymentIbanData'
+      - $ref: '#/components/schemas/PaymentWalletData'
     ThreeDSecureData:
       additionalProperties: false
       example:
@@ -3765,10 +3725,10 @@ components:
           maxLength: 50
           type: string
         billingCity:
-          maxLength: 30
+          maxLength: 50
           type: string
         billingPostcode:
-          maxLength: 8
+          maxLength: 16
           type: string
         billingState:
           maxLength: 30
@@ -3795,10 +3755,10 @@ components:
           maxLength: 50
           type: string
         shippingCity:
-          maxLength: 30
+          maxLength: 50
           type: string
         shippingPostcode:
-          maxLength: 8
+          maxLength: 16
           type: string
         shippingState:
           maxLength: 30
@@ -3845,61 +3805,10 @@ components:
         markAsPreferred:
           type: boolean
       type: object
-    MaybeTransactionResponse:
-      discriminator:
-        mapping:
-          "false": '#/components/schemas/TransactionErrorResponse'
-          "true": '#/components/schemas/TransactionResponse'
-        propertyName: success
-      example:
-        success: true
-      properties:
-        success:
-          nullable: false
-          type: boolean
-      required:
-      - boolean
-      type: object
-    TransactionErrorResponse:
-      allOf:
-      - $ref: '#/components/schemas/MaybeTransactionResponse'
-      - $ref: '#/components/schemas/ErrorType'
-      - $ref: '#/components/schemas/TransactionErrorResponse_allOf'
     TransactionResponse:
       allOf:
       - $ref: '#/components/schemas/MaybeTransactionResponse'
       - $ref: '#/components/schemas/TransactionResponse_allOf'
-    ErrorType:
-      additionalProperties: false
-      properties:
-        errorMessage:
-          type: string
-        errorCode:
-          format: int32
-          type: integer
-        adapterMessage:
-          type: string
-        adapterCode:
-          type: string
-      type: object
-    MaybeScheduleResponse:
-      discriminator:
-        mapping:
-          "false": '#/components/schemas/ScheduleErrorResponse'
-          "true": '#/components/schemas/ScheduleResponse'
-        propertyName: success
-      example:
-        success: true
-      properties:
-        success:
-          type: boolean
-      required:
-      - boolean
-      type: object
-    ScheduleErrorResponse:
-      allOf:
-      - $ref: '#/components/schemas/MaybeScheduleResponse'
-      - $ref: '#/components/schemas/ErrorType'
     ScheduleResponse:
       allOf:
       - $ref: '#/components/schemas/MaybeScheduleResponse'
@@ -4057,13 +3966,6 @@ components:
         error:
           type: string
       type: object
-    PeriodUnit:
-      enum:
-      - DAY
-      - WEEK
-      - MONTH
-      - YEAR
-      type: string
     ReturnData:
       discriminator:
         mapping:
@@ -4081,33 +3983,6 @@ components:
           nullable: false
       required:
       - _TYPE
-      type: object
-    ReturnDataType:
-      enum:
-      - cardData
-      - phoneData
-      - ibanData
-      - walletData
-      type: string
-    cardData:
-      allOf:
-      - $ref: '#/components/schemas/ReturnData'
-      - $ref: '#/components/schemas/cardData_allOf'
-      type: object
-    phoneData:
-      allOf:
-      - $ref: '#/components/schemas/ReturnData'
-      - $ref: '#/components/schemas/phoneData_allOf'
-      type: object
-    ibanData:
-      allOf:
-      - $ref: '#/components/schemas/ReturnData'
-      - $ref: '#/components/schemas/ibanData_allOf'
-      type: object
-    walletData:
-      allOf:
-      - $ref: '#/components/schemas/ReturnData'
-      - $ref: '#/components/schemas/walletData_allOf'
       type: object
     TransactionErrors:
       items:
@@ -4212,6 +4087,135 @@ components:
         customer:
           $ref: '#/components/schemas/Customer'
       type: object
+    PeriodUnit:
+      enum:
+      - DAY
+      - WEEK
+      - MONTH
+      - YEAR
+      type: string
+    MaybeScheduleResponse:
+      discriminator:
+        mapping:
+          "false": '#/components/schemas/ScheduleErrorResponse'
+          "true": '#/components/schemas/ScheduleResponse'
+        propertyName: success
+      example:
+        success: true
+      properties:
+        success:
+          type: boolean
+      required:
+      - boolean
+      type: object
+    ScheduleErrorResponse:
+      allOf:
+      - $ref: '#/components/schemas/MaybeScheduleResponse'
+      - $ref: '#/components/schemas/ErrorType'
+    ErrorType:
+      additionalProperties: false
+      properties:
+        errorMessage:
+          type: string
+        errorCode:
+          format: int32
+          type: integer
+        adapterMessage:
+          type: string
+        adapterCode:
+          type: string
+      type: object
+    MaybeTransactionResponse:
+      discriminator:
+        mapping:
+          "false": '#/components/schemas/TransactionErrorResponse'
+          "true": '#/components/schemas/TransactionResponse'
+        propertyName: success
+      example:
+        success: true
+      properties:
+        success:
+          nullable: false
+          type: boolean
+      required:
+      - success
+      type: object
+    TransactionErrorResponse:
+      allOf:
+      - $ref: '#/components/schemas/MaybeTransactionResponse'
+      - $ref: '#/components/schemas/ErrorType'
+      - $ref: '#/components/schemas/TransactionErrorResponse_allOf'
+    PaymentWalletData:
+      additionalProperties: false
+      properties:
+        walletData:
+          $ref: '#/components/schemas/PaymentWalletData_walletData'
+      type: object
+    PaymentIbanData:
+      additionalProperties: false
+      properties:
+        ibanData:
+          $ref: '#/components/schemas/PaymentIbanData_ibanData'
+      type: object
+    ReturnDataType:
+      enum:
+      - cardData
+      - phoneData
+      - ibanData
+      - walletData
+      type: string
+    phoneData:
+      allOf:
+      - $ref: '#/components/schemas/ReturnData'
+      - $ref: '#/components/schemas/phoneData_allOf'
+      type: object
+    ibanData:
+      allOf:
+      - $ref: '#/components/schemas/ReturnData'
+      - $ref: '#/components/schemas/ibanData_allOf'
+      type: object
+    walletData:
+      allOf:
+      - $ref: '#/components/schemas/ReturnData'
+      - $ref: '#/components/schemas/walletData_allOf'
+      type: object
+    cardData:
+      allOf:
+      - $ref: '#/components/schemas/ReturnData'
+      - $ref: '#/components/schemas/cardData_allOf'
+      type: object
+    Split:
+      additionalProperties: false
+      example:
+        amount: 0.8008281904610115
+        identification: identification
+        sellerMerchantGuid: sellerMerchantGuid
+        sellerMerchantExternalId: sellerMerchantExternalId
+        currency: currency
+        commisionFee:
+          amount: 6.027456183070403
+          currency: currency
+      properties:
+        identification:
+          type: string
+        amount:
+          type: number
+        currency:
+          pattern: "^[A-Z]{3}$"
+          type: string
+        sellerMerchantGuid:
+          type: string
+        sellerMerchantExternalId:
+          type: string
+        commisionFee:
+          $ref: '#/components/schemas/Split_commisionFee'
+      type: object
+    ThreeDSecureType:
+      enum:
+      - "OFF"
+      - OPTIONAL
+      - MANDATORY
+      type: string
     Items_inner:
       additionalProperties: false
       example:
@@ -4242,56 +4246,6 @@ components:
             type: string
           type: object
       type: object
-    Split_commisionFee:
-      example:
-        amount: 6.027456183070403
-        currency: currency
-      properties:
-        amount:
-          type: number
-        currency:
-          type: string
-      type: object
-    IbanData_ibanData:
-      additionalProperties: false
-      properties:
-        iban:
-          maxLength: 34
-          type: string
-        bic:
-          maxLength: 11
-          type: string
-        mandateId:
-          maxLength: 50
-          type: string
-        mandateDate:
-          $ref: '#/components/schemas/Date'
-      type: object
-    WalletData_walletData:
-      additionalProperties: false
-      properties:
-        walletReferenceId:
-          maxLength: 255
-          type: string
-        walletOwner:
-          maxLength: 255
-          type: string
-        walletType:
-          maxLength: 255
-          type: string
-      type: object
-    TransactionErrorResponse_allOf:
-      properties:
-        returnType:
-          enum:
-          - ERROR
-          type: string
-        errors:
-          items:
-            $ref: '#/components/schemas/ErrorType'
-          type: array
-      type: object
-      example: null
     TransactionResponse_allOf_riskCheckData:
       properties:
         riskCheckResult:
@@ -4308,6 +4262,9 @@ components:
       example: null
     TransactionResponse_allOf:
       properties:
+        success:
+          nullable: false
+          type: boolean
         uuid:
           type: string
         purchaseId:
@@ -4365,16 +4322,16 @@ components:
       properties:
         scheduleId:
           type: string
-        registrationUuid:
-          type: string
-        merchantMetaData:
-          type: string
         oldStatus:
           $ref: '#/components/schemas/ScheduleStatus'
         newStatus:
           $ref: '#/components/schemas/ScheduleStatus'
         scheduledAt:
           $ref: '#/components/schemas/DateTimeZone'
+        registrationUuid:
+          type: string
+        merchantMetaData:
+          type: string
       type: object
       example: null
     OptionsResponse_options_inner:
@@ -4388,6 +4345,91 @@ components:
         value:
           type: string
       type: object
+    TransactionErrorResponse_allOf:
+      properties:
+        success:
+          nullable: false
+          type: boolean
+        returnType:
+          enum:
+          - ERROR
+          type: string
+        errors:
+          items:
+            $ref: '#/components/schemas/ErrorType'
+          type: array
+      type: object
+      example: null
+    PaymentWalletData_walletData:
+      additionalProperties: false
+      properties:
+        walletReferenceId:
+          maxLength: 255
+          type: string
+        walletOwner:
+          maxLength: 255
+          type: string
+        walletType:
+          maxLength: 255
+          type: string
+      type: object
+    PaymentIbanData_ibanData:
+      additionalProperties: false
+      properties:
+        iban:
+          maxLength: 34
+          type: string
+        bic:
+          maxLength: 11
+          type: string
+        mandateId:
+          maxLength: 50
+          type: string
+        mandateDate:
+          $ref: '#/components/schemas/Date'
+      type: object
+    phoneData_allOf:
+      properties:
+        phoneNumber:
+          type: string
+        country:
+          pattern: "^[A-Z]{2}$"
+          type: string
+        operator:
+          type: string
+      type: object
+      example: null
+    ibanData_allOf:
+      properties:
+        accountOwner:
+          type: string
+        iban:
+          type: string
+        bic:
+          type: string
+        mandateId:
+          type: string
+        mandateDate:
+          $ref: '#/components/schemas/Date'
+        bankName:
+          type: string
+        bankBranchName:
+          type: string
+        country:
+          pattern: "^[A-Z]{2}$"
+          type: string
+      type: object
+      example: null
+    walletData_allOf:
+      properties:
+        walletReferenceId:
+          type: string
+        walletOwner:
+          type: string
+        walletType:
+          type: string
+      type: object
+      example: null
     cardData_allOf:
       properties:
         type:
@@ -4431,50 +4473,24 @@ components:
           type: string
       type: object
       example: null
-    phoneData_allOf:
+    Split_commisionFee:
+      example:
+        amount: 6.027456183070403
+        currency: currency
       properties:
-        phoneNumber:
-          type: string
-        country:
-          pattern: "^[A-Z]{2}$"
-          type: string
-        operator:
+        amount:
+          type: number
+        currency:
           type: string
       type: object
-      example: null
-    ibanData_allOf:
-      properties:
-        accountOwner:
-          type: string
-        iban:
-          type: string
-        bic:
-          type: string
-        mandateId:
-          type: string
-        mandateDate:
-          $ref: '#/components/schemas/Date'
-        bankName:
-          type: string
-        bankBranchName:
-          type: string
-        country:
-          pattern: "^[A-Z]{2}$"
-          type: string
-      type: object
-      example: null
-    walletData_allOf:
-      properties:
-        walletReferenceId:
-          type: string
-        walletOwner:
-          type: string
-        walletType:
-          type: string
-      type: object
-      example: null
   securitySchemes:
     basicAuth:
       scheme: basic
+      type: http
+    signature:
+      description: HMAC Signature
+      in: header
+      name: X-Signature
+      scheme: signature
       type: http
 
