# ixopay-api-core/src/main/java/com/ixopay/core/model/PaymentWalletData.java
@@ -1,0 +1,112 @@
+/*
+ * IXOPAY Payment Platform
+ * IXOPAY Payment Platform
+ *
+ * The version of the OpenAPI document: 3.0.0
+ * Contact: support@ixopay.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.ixopay.core.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.ixopay.core.model.PaymentWalletDataWalletData;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * PaymentWalletData
+ */
+@JsonPropertyOrder({
+  PaymentWalletData.JSON_PROPERTY_WALLET_DATA
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class PaymentWalletData {
+  public static final String JSON_PROPERTY_WALLET_DATA = "walletData";
+  private PaymentWalletDataWalletData walletData;
+
+  public PaymentWalletData() { 
+  }
+
+  public PaymentWalletData walletData(PaymentWalletDataWalletData walletData) {
+    this.walletData = walletData;
+    return this;
+  }
+
+   /**
+   * Get walletData
+   * @return walletData
+  **/
+  @javax.annotation.Nullable
+  @ApiModelProperty(value = "")
+  @JsonProperty(JSON_PROPERTY_WALLET_DATA)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+
+  public PaymentWalletDataWalletData getWalletData() {
+    return walletData;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_WALLET_DATA)
+  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+  public void setWalletData(PaymentWalletDataWalletData walletData) {
+    this.walletData = walletData;
+  }
+
+
+  /**
+   * Return true if this PaymentWalletData object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    PaymentWalletData paymentWalletData = (PaymentWalletData) o;
+    return Objects.equals(this.walletData, paymentWalletData.walletData);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(walletData);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class PaymentWalletData {\n");
+    sb.append("    walletData: ").append(toIndentedString(walletData)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
